--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
 
 .main-content {
 	position: relative;
+	top: 0;
 }
 
 h2 {
@@ -123,6 +124,7 @@ span {
 	}
 }
 
+
 @media only screen and (max-width: 480px) {
 	h2 {
 		font-size: 1rem;
@@ -130,10 +132,24 @@ span {
 
 	.striking {
 		font-size: .75rem;
+		margin-bottom: .3rem;
+		margin-top: .3rem;
+		margin-left: .15rem;
 	}
 
 	span {
 		font-size: .6rem;
+	}
+
+	.main-content {
+		top: 2.3rem;
+	}
+
+	.button a {
+		border-radius: 3px;
+		margin-top: .4rem;
+		padding: .3rem .25rem;
+		font-size: .5rem;
 	}
 
 }
@@ -192,120 +208,143 @@ a .logo {
 	color: #F9F6EE;
 }
 
-/*===================================
+@media only screen and (min-width: 480px) {
+	.mobile ul {
+		display: none;
+	}
+
+	@media only screen and (max-width: 480px) {
+		.desktop ul {
+			display: none;
+		}
+
+		header .content {
+			padding: .5rem 0;
+		}
+
+		header ul {
+			display: flex;
+			justify-content: space-around;
+			align-items: center;
+			width: 100%;
+		}
+
+		header .mobile li {
+			padding: 0;
+		}
+	}
+
+
+	/*===================================
 CTA
 ===================================*/
 
-#sign-up-section {
-	display: flex;
-	justify-content: flex-start;
-	align-items: flex-start;
-	background-image: url("../images/ice-cream.jpg");
-	background-position: top;
-	background-size: cover;
-	background-repeat: no-repeat;
-	width: auto;
-	height: auto;
-	position: relative;
-	c
-}
-
-#sign-up-cta {
-	display: block;
-	position: relative;
-	background-color: hsla(44, 48%, 95%, .85);
-	top: 4.1rem;
-	padding: .75rem .4rem 1rem .4rem;
-	max-width: 35%;
-	max-height: auto;
-	margin-bottom: 4rem;
-	margin-left: 3rem;
-	border-radius: 0.125rem;
-}
-
-@media only screen and (max-width: 480px) {
-
 	#sign-up-section {
-		justify-content: center;
-		align-items: center;
-		background-image: none;
+		display: flex;
+		justify-content: flex-start;
+		align-items: flex-start;
+		background-image: url("../images/ice-cream.jpg");
 		background-position: top;
+		background-size: cover;
+		background-repeat: no-repeat;
 		width: auto;
 		height: auto;
 		position: relative;
-		padding-bottom: 0;
+		padding-bottom: .71rem;
 	}
 
 	#sign-up-cta {
-		margin-top: 0;
-		top: 0;
-		padding: .75rem 0 .5rem 0;
-		max-width: 100%;
-		margin-bottom: 0;
-		margin-left: 0;
-		border-radius: 0;
+		display: block;
+		position: relative;
+		background-color: hsla(44, 48%, 95%, 85%);
+		top: 4.1rem;
+		padding: .75rem .4rem 1rem .4rem;
+		max-width: 35%;
+		max-height: auto;
+		margin-bottom: 4rem;
+		margin-left: 3rem;
+		border-radius: 0.125rem;
 	}
-}
 
-/*====================================
+	@media only screen and (max-width: 480px) {
+
+		#sign-up-section {
+			justify-content: center;
+			align-items: start;
+			background-image: none;
+			background-position: top;
+			width: auto;
+			height: auto;
+			position: relative;
+			padding-bottom: 0;
+		}
+
+		#sign-up-cta {
+			margin-top: 0;
+			top: 0;
+			padding: 1rem 0 .5rem 0;
+			max-width: 100%;
+			margin-bottom: 0;
+			margin-left: 0;
+			border-radius: 0;
+		}
+
+		.hero {
+			justify-content: center;
+			align-items: start;
+		}
+	}
+
+
+
+
+	/*====================================
 Features
 ====================================*/
 
-#features {
-	display: flex;
-	column-gap: 0.75rem;
-	margin: 1rem auto 0 auto;
-	width: 80%;
-	justify-content: center;
-	align-items: center;
-}
-
-.feature {
-	flex: 1;
-}
-
-.image-container {
-	max-height: 4rem;
-	margin: 0 auto;
-	position: center;
-}
-
-#features .feature img {
-	display: flex;
-	object-fit: cover;
-	width: 40%;
-	height: 20rem;
-	margin: 0 auto;
-
-}
-
-#features .feature p {
-	padding: 1.5rem 1.1rem;
-	width: 100%;
-	height: auto;
-	font-family: sans-serif;
-	min-height: 40%;
-	line-height: .9rem;
-
-}
-
-#features .feature img,
-.feature p {
-	margin: auto;
-	width: 100%;
-	padding-bottom: 0.5rem;
-}
-
-
-@media only screen and (max-width: 600px) {
 	#features {
-		flex-direction: column;
-		padding: 0;
+		display: flex;
+		column-gap: 0.75rem;
+		margin: 1rem auto 0 auto;
+		width: 80%;
+		justify-content: center;
+		align-items: center;
+	}
+
+	.feature {
+		flex: 1;
+	}
+
+	.image-container {
+		max-height: 4rem;
+		margin: 0 auto;
+		position: center;
+	}
+
+	#features .feature img {
+		display: flex;
+		object-fit: cover;
+		width: 40%;
+		height: 20rem;
+		margin: 0 auto;
+
 	}
 
 	#features .feature p {
-		font-family: serif;
-		color: purple;
+		padding: 1.5rem 1.1rem;
+		width: 100%;
+		height: auto;
+		font-family: sans-serif;
+		min-height: 40%;
+		line-height: .9rem;
+
+	}
+
+	#features .feature img,
+	.feature p {
+		margin: auto;
+		width: 100%;
+		padding-bottom: 0.5rem;
 	}
 
 	/*====================================
@@ -365,7 +404,9 @@ Community
 		width: 40rem;
 	}
 
-	@media only screen and (max-width: 264.57 px) {}
+	@media only screen and (max-width: 600px) {
+		/* ruleset for >= 600px */
+	}
 
 	/*===================================
 Footer
