Align features and add form

--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,7 @@ span {
 }
 
 @media only screen and (max-width: 813px) {
+
 	.button,
 	.button2 {
 		padding: 1.5%;
@@ -210,11 +211,12 @@ span {
 
 
 @media only screen and (max-width: 785px) {
+
 	.button,
 	.button2 {
 		padding: 4%;
 		margin: 1rem;
-}
+	}
 }
 
 @media only screen and (max-width: 680px) {
@@ -264,19 +266,22 @@ span {
 
 
 @media only screen and (max-width: 505px) {
+
 	.button,
 	.button2 {
 		padding: 4%;
-}
+	}
 }
 
 @media only screen and (max-width: 395px) {
+
 	.button,
 	.button2 {
 		padding: 1%;
 		margin: .15rem;
 	}
 }
+
 /*=================================
 Header
 =================================*/
@@ -469,7 +474,7 @@ Features
 #features2 {
 	display: flex;
 	column-gap: 0.75rem;
-	height: 19rem;	
+	height: 19rem;
 	width: 80%;
 	background-color: #E4E0D8;
 	flex-direction: row;
@@ -480,7 +485,7 @@ Features
 }
 
 #features2 {
-	margin: 2rem auto 2.5rem auto;
+	margin: .75rem auto 2.5rem auto;
 }
 
 
@@ -503,91 +508,32 @@ Features
 .row2,
 .row3,
 .row4 {
-width: 100%;
+	width: 100%;
 }
 
+/*
 .feature p {
 	padding: 1.5rem 1.1rem;
 	width: 100%;
-	height: auto;
 	font-family: sans-serif;
 	min-height: 40%;
 	line-height: .9rem;
 
 }
+*/
 
 .feature img,
 .feature p {
 	margin: auto;
 	width: 100%;
-	padding-bottom: 1.5rem;
 }
-
-
-
-/*====================================
-Community
-====================================*/
-
-/*
-#community {
-	display: flex;
-	margin-top: 1.5rem;
-	margin-bottom: .75rem;
-	align-items: center;
-	align-content: center;
-	margin-left: 10%;
-/*
-	margin-right: .15rem;
-*/
-
-/*
-	flex-wrap: nowrap;
-}
-*/
-/*
-.community-container {
-	display: flex;
-	justify-content: center;
-	margin-top: .5rem;
-	width: 90%;
-}
-
-.community-container p {
-	border: 1px solid #000000;
-	font-size: 0.75rem;
-	text-align: center;
-	font-family: sans-serif;
-	align-content: center;
-	width: 60%;
-	height: auto;
-
-}
-
-img {
-	margin: 0 auto;
-	width: 100%;
-	height: auto;
-	overflow: hidden;
-	object-fit: cover;
-	padding-top: .3rem;
-	padding-bottom: .15rem;
-}
-
-.community-sign-up {
-	margin-right: .25rem;
-	width: 40rem;
-}
-
-*/
 
 /*===================================
 Newsletter
 ===================================*/
 
-
 #newsletter {
-background-image: url("../images/ice-cream.jpg");
+	background-color: #F9F6EE;
 }
 
 /*===================================
