Add semantic tags and update CSS Continue attempts with JavaScript

--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,24 @@ h2 {
 h3 {
 	font-family: sans-serif;
 	font-weight: bold;
-}	
+}
+
+
+p.striking,
+.striking2 {
+	display: inline-block;
+	color: #1C1C1C;
+	font-size: 1rem;
+	font-weight: bold;
+	margin-top: .05rem;
+	margin-bottom: 0rem;
+	margin-left: .15rem;
+	align: center;
+	width: 100%;
+	border-style: none;
+	padding-top: .8rem;
+	padding-bottom: .5rem;
+}
 
 p {
 	border: 1px solid #000000;
@@ -53,12 +70,13 @@ p.app {
 	display: inline-block;
 	border-width: 0;
 	width: 80%;
-	padding-top: .5rem;
+	padding-top: .01rem;
 	text-align: center;
 	margin-bottom: .2rem;
 	color: 1C1C1C;
 	font-size: .7rem;
 	font-weight: 500;
+	line-height: 1.2rem;
 
 }
 
@@ -140,16 +158,6 @@ p.app::after {
 	white-space: pre;
 }
 
-.striking,
-.striking2 {
-	color: #1C1C1C;
-	font-size: 1rem;
-	font-weight: bold;
-	margin-bottom: .5rem;
-	margin-top: .5rem;
-	margin-left: .15rem;
-}
-
 .center {
 	text-align: center;
 }
@@ -228,47 +236,47 @@ p.app::after {
 	}
 }
 
-	h2 {
-		font-size: 1rem;
-	}
+h2 {
+	font-size: 1rem;
+}
 
-	.striking {
-		font-size: .75rem;
-		margin-bottom: .3rem;
-		margin-top: .3rem;
-		margin-left: .15rem;
-	}
+.striking {
+	font-size: .75rem;
+	margin-bottom: .3rem;
+	margin-top: .3rem;
+	margin-left: .15rem;
+}
 
-	span {
-		font-size: .6rem;
-	}
+span {
+	font-size: .6rem;
+}
 
-	.main-content {
-		top: 2.3rem;
-	}
+.main-content {
+	top: 2.3rem;
+}
 
-	.buttonGroup {
-		display: flex;
-		align-items: center;
-		justify-content: stretch;
-	}
+.buttonGroup {
+	display: flex;
+	align-items: center;
+	justify-content: stretch;
+}
 
 
-	.button,
-	.button2 {
-		diplay: flex;
-		flex: auto;
-		border-radius: 3px;
-		margin-top: .4rem;
-		padding-top: .75rem;
-		padding-bottom: .75rem;
-		padding-right: 6%;
-		padding-left: 6%;
-		font-size: .5rem;
-		text-align: center;
-		width: 100%;
-		height: auto;
-	}
+.button,
+.button2 {
+	diplay: flex;
+	flex: auto;
+	border-radius: 3px;
+	margin-top: .4rem;
+	padding-top: .75rem;
+	padding-bottom: .75rem;
+	padding-right: 6%;
+	padding-left: 6%;
+	font-size: .5rem;
+	text-align: center;
+	width: 100%;
+	height: auto;
+}
 }
 
 
@@ -535,10 +543,9 @@ Features
 */
 
 @media only screen and (max-width: 420px) {
-	#features
-	#features2 {
+	#features #features2 {
 		padding-top: 3rem;
-}
+	}
 }
 
 /*
